# bioactive-ml

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  RESULTS.md  SESSION_SUMMARY.md  baselines.py  data.py  design.py  esm_embeddings.py  evaluate.py  expand_dataset.py  fetch_external_dbs.py  fetch_peptides.py  generate.py  interpret.py  model.py  pareto.py  properties.py  pyproject.toml  scrape_biopep.py  server.py  structure.py  topology.py  train.py  train_tda.py  visualize.py  visualize_design.py
.github/workflows/: ci.yml
candidates/: ace_mc.json
data/: biopep_scraped.csv  curated_properties.csv  dfbp_scraped.csv  food_peptides.csv
design_output/ace/: ace_inhibitor_designs.csv  ace_inhibitor_report.md
designs/: ace_inhibitor_designs.csv  ace_inhibitor_report.md  alpha_glucosidase_designs.csv  alpha_glucosidase_report.md  bile_acid_receptor_designs.csv  bile_acid_receptor_report.md  dpp4_inhibitor_designs.csv  dpp4_inhibitor_report.md  lipase_designs.csv  lipase_report.md  sodium_hydrogen_exchanger_designs.csv  sodium_hydrogen_exchanger_report.md
tests/: test_baselines.py  test_data.py  test_model.py  test_pareto.py  test_properties.py  test_train.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: AttributionViewer.tsx  DesignPanel.tsx  MoleculeViewer.tsx  PeptideInput.tsx  PredictionResults.tsx
web/lib/: api.ts
